# DS_Search

./: .flaskenv  .gitignore  README.md  pyproject.toml
app/: __init__.py  forms.py  routes.py
app/templates/: upload.html
