[tool.poetry]
name = "NLP_Search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_wtf = "^0.14.3"
python-dotenv = "^0.13.0"
flask-sqlalchemy = "^2.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
